<resources>
    <string name="app_name">ACAZIA TEST</string>
    <string name="text_downloading">Downloading…</string>
    <string name="message_ok">OK</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="or_login_with">or Login with</string>
    <string name="not_a_turino_user_yet">Not a Turino user yet?</string>
    <string name="signup_here">Signup here</string>
    <string name="acazia">ACAZIA</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
</resources>